<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/offline_prediction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IDS_OFFLINE_PREDICTION"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/PLANTIMG"
        android:scaleType="centerCrop"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/offline_prediction_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IDS_TAKE_PHOTO"
        app:layout_constraintTop_toBottomOf="@id/image_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/gallery_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IDS_CHOOSE_GALLERY"
        app:layout_constraintTop_toBottomOf="@id/camera_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/predict_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IDS_PREDICT"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/gallery_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/prediction_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IDS_PREDICTION_RESULT"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/predict_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
