<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edefe5"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#edefe5"
        android:layout_marginBottom="100dp"
        tools:context=".ui.home.HomeFragment">

        <View
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#667d06"
            android:layout_height="90dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="-30dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_marginEnd="-30dp"
            android:paddingBottom="100dp"
            android:padding="-50dp"
            android:background="@drawable/top_bar_corner_bg"
            android:id="@+id/header"
            android:clipToPadding="true"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/HELLO_FARMER"
                android:textSize="22sp"
                android:id="@+id/farmer_name"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:id="@+id/today_date"
                app:layout_constraintTop_toBottomOf="@id/farmer_name"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="20dp"
            android:id="@+id/weather_card"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="-50dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:layout_height="200dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="Weather data will come here"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_card"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/commodity_and_food_header"
            android:text="@string/COMMODITY_AND_FOOD"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"/>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/commodity_and_food_header"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            tools:itemCount="10"
            android:id="@+id/commodity_and_food_list"
            tools:listitem="@layout/commodity_or_food_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commodity_and_food_list"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:id="@+id/your_field_header"
            android:textStyle="bold"
            android:text="@string/MANAGE_YOUR_FIELD"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/my_crop_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:minWidth="100dp"
            android:minHeight="140dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@id/end_view"
            app:layout_constraintEnd_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/your_field_header">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:contentDescription="@string/IDS_MY_CROPS"
                android:padding="8dp"
                android:src="@drawable/my_crop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/IDS_MY_CROPS"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:id="@+id/barrier"
            app:barrierDirection="end"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="140dp"
            app:cardCornerRadius="20dp"
            android:minHeight="140dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/end_view"
            app:layout_constraintStart_toEndOf="@id/barrier"
            android:id="@+id/my_crop_doctor_button"
            app:layout_constraintTop_toBottomOf="@id/your_field_header"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="90dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/IDS_MY_CROP_DOCTOR"
                android:src="@drawable/crop_doc"
                android:layout_gravity="center_horizontal"
                android:layout_height="90dp"/>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/IDS_MY_CROP_DOCTOR"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="140dp"
            android:minWidth="100dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@id/barrier"
            android:id="@+id/online_prediction_button"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toTopOf="@id/end_view"
            app:cardBackgroundColor="@color/white"
            android:minHeight="140dp"
            app:layout_constraintTop_toBottomOf="@id/my_crop_doctor_button"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="90dp"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:contentDescription="@string/IDS_ONLINE_PREDICTION"
                android:src="@drawable/okk"
                android:layout_gravity="center_horizontal"
                android:layout_height="90dp"/>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/IDS_ONLINE_PREDICTION"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/offline_prediction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IDS_OFFLINE_PREDICTION"
            app:layout_constraintTop_toBottomOf="@id/my_crop_doctor_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/end_view"
            app:layout_constraintTop_toBottomOf="@id/my_crop_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
